crates/compiler/src/snapshots/compiler__tokenizer__test__test-9.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: a
    attributes:
      - name: b
        value:
          content:
            raw: ""
            ops:
              bits: 18
          location:
            start:
              offset: 5
              line: 1
              column: 6
            end:
              offset: 8
              line: 1
              column: 9
        name_loc:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 4
            line: 1
            column: 5
        location:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 8
            line: 1
            column: 9
    self_closing: true

